fix some css and fix overflow for app div

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 .App{
   height: 100vh;
+  overflow: hidden;
 }
 .sections{
   width:100%;
