--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -72,4 +72,7 @@ button:focus{
         width: 300px;
         height: 200px;
     }
+    .row_contact{
+        overflow: auto;
+    }
 }
